<resources>
    <string name="app_name">ZentoryAPP</string>
    <string name="bienvenido">¡Bienvenido de nuevo!</string>
    <string name="iniciar_sesion_continuar">Iniciar sesión para continuar</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="hint_correo">Ingresa tu correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="hint_contrasena">Ingresa tu contraseña</string>
    <string name="olvidaste_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="desc_logo">Logo de Zentory</string>
    <string name="no_tienes_cuenta">¿No tienes una cuenta? </string>
    <string name="registrate_aqui">Regístrate aquí</string>
    <string name="o_separador">O</string>
    <string name="iniciar_con_google">Iniciar sesión con Google</string>
    <string name="inicio">Inicio</string>

</resources>